Changed website title.

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
+title: Bruno Vilhena Adorno, PhD # the website title (if blank, full name will be used instead)
 first_name: Bruno
 middle_name: Vilhena
 last_name: Adorno
