--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ navbar_fixed: true
 footer_fixed: true
 
 # Dimensions
-max_width: 1200px
+max_width: 1000px
 
 # TODO: add layout settings (single page vs. multi-page)
 
@@ -293,7 +293,7 @@ scholar:
   details_link: Details
 
   query: "@*"
-  group_by: type, year
+  group_by: type
   group_order: descending
 
 # Display different badges withs stats for your publications
