--- a/_config.yml
+++ b/_config.yml
@@ -317,8 +317,9 @@ scholar:
   details_link: Details
 
   query: "@*"
-  group_by: type
+  group_by: type, year
   group_order: descending
+  type_order: [article, techreport, recollection, inproceedings]
 
 # Display different badges withs stats for your publications
 enable_publication_badges:
