--- a/_config.yml
+++ b/_config.yml
@@ -299,7 +299,7 @@ scholar:
   last_name: [Einstein]
   first_name: [Albert, A.]
 
-  style: apa
+  style: ieeetr
   locale: en
 
   source: /_bibliography/
