--- a/_config.yml
+++ b/_config.yml
@@ -274,7 +274,7 @@ scholar:
   last_name: [Einstein]
   first_name: [Albert, A.]
 
-  style: ieeetr
+  style: harvard-cite-them-right
   locale: en
 
   source: /_bibliography/
