--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,7 @@ zotero_username: # your zotero username
 wechat_qr: # filename of your wechat qr-code saved as an image (e.g., wechat-qr.png if saved to assets/img/wechat-qr.png)
 
 contact_note: >
-  The best way to contact me is by email.
+  The best way to contact me is by email at bruno.adorno(at)manchester.ac.uk.
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
