--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,12 +1,7 @@
 github_users:
-  - torvalds
-  - alshedivat
-
+  - bvadorno
+  
 github_repos:
-  - alshedivat/al-folio
-  - twbs/bootstrap
-  - jekyll/jekyll
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - jpswalsh/academicons
-  - mathjax/MathJax
+  - dqrobotics/pyhton
+  - dqrobotics/matlab
+  - dqrobotics/cpp
