--- a/_config.yml
+++ b/_config.yml
@@ -300,7 +300,7 @@ scholar:
   last_name: [Adorno]
   first_name: [Bruno, V.]
 
-  style: ieee-transactions-on-robotics
+  style: ieee-with-url
   locale: en
 
   source: /_bibliography/
@@ -318,7 +318,7 @@ scholar:
   details_link: Details
 
   query: "@*"
-  group_by: year
+  group_by: year, type
   group_order: descending
   type_order: [thesis, conference, inproceedings, incollection, unpublished, article]
 
