--- a/_config.yml
+++ b/_config.yml
@@ -320,7 +320,7 @@ scholar:
   query: "@*"
   group_by: year, type
   group_order: descending
-  type_order: [thesis, conference, inproceedings, incollection, unpublished, article]
+  type_order: [thesis, conference, inproceedings, incollection, unpublished, misc, techreport, article]
 
 # Display different badges withs stats for your publications
 enable_publication_badges:
