Added separate files for the bibliography.

--- a/_config.yml
+++ b/_config.yml
@@ -305,7 +305,7 @@ scholar:
 
   source: /_bibliography/
   bibliography: papers.bib
-  bibligraphy_journals: papers_journals.bib
+  bibligraphyjournals: papers_journals.bib
   bibliography_template: bib
   # Note: if you have latex math in your bibtex, the latex filter
   # preprocessing may conflict with MathJAX if the latter is enabled.
