--- a/_config.yml
+++ b/_config.yml
@@ -304,7 +304,7 @@ scholar:
   locale: en
 
   source: /_bibliography/
-  bibliography: [papers.bib, papers_journals.bib] 
+  bibliography: papers.bib, papers_journals.bib
   bibliography_template: bib
   # Note: if you have latex math in your bibtex, the latex filter
   # preprocessing may conflict with MathJAX if the latter is enabled.
