Testing new bibliography.

--- a/_config.yml
+++ b/_config.yml
@@ -314,7 +314,7 @@ scholar:
   replace_strings: true
   join_strings: true
 
-  details_dir: bibliography
+  details_dir: [bibliography, bib_journals]
   details_link: Details
 
   query: "@*"
