--- a/_config.yml
+++ b/_config.yml
@@ -305,6 +305,7 @@ scholar:
 
   source: /_bibliography/
   bibliography: papers.bib
+  bib_journals: papers.bib 
   bibliography_template: bib
   # Note: if you have latex math in your bibtex, the latex filter
   # preprocessing may conflict with MathJAX if the latter is enabled.
