--- a/_config.yml
+++ b/_config.yml
@@ -304,8 +304,7 @@ scholar:
   locale: en
 
   source: /_bibliography/
-  bibliographya: papers.bib
-  bib_journals: papers.bib 
+  bibliography: papers.bib
   bibliography_template: bib
   # Note: if you have latex math in your bibtex, the latex filter
   # preprocessing may conflict with MathJAX if the latter is enabled.
