--- a/_config.yml
+++ b/_config.yml
@@ -300,7 +300,7 @@ scholar:
   last_name: [Adorno]
   first_name: [Bruno Vilhena]
 
-  style: ieee-with-url
+  style: ieee
   locale: en
 
   source: /_bibliography/
