Cosmetic changes in the citation style.

--- a/_config.yml
+++ b/_config.yml
@@ -298,9 +298,9 @@ display_categories: ["blockquotes"] # these categories will be displayed on the 
 scholar:
 
   last_name: [Adorno]
-  first_name: [Bruno Vilhena]
+  first_name: [Bruno Vilhena, Bruno V., B. V.]
 
-  style: ieee
+  style: elsevier-harvard2
   locale: en
 
   source: /_bibliography/
