Cosmetic changes in the citation style.

--- a/_config.yml
+++ b/_config.yml
@@ -300,7 +300,7 @@ scholar:
   last_name: [Adorno]
   first_name: [Bruno Vilhena, Bruno V., B. V.]
 
-  style: elsevier-harvard2
+  style: apa
   locale: en
 
   source: /_bibliography/
