--- a/_config.yml
+++ b/_config.yml
@@ -318,9 +318,9 @@ scholar:
   details_link: Details
 
   query: "@*"
-  group_by: year
-  group_order: descending
-  type_order: [thesis, conference, inproceedings, incollection, unpublished, misc, techreport, article]
+  # group_by: year
+  # group_order: descending
+  # type_order: [thesis, conference, inproceedings, incollection, unpublished, misc, techreport, article]
 
 # Display different badges withs stats for your publications
 enable_publication_badges:
